--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-uglify": "^0.8.0",
     "grunt-html2js": "^0.3.0",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
