--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-html2js": "^0.3.0",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
-    "karma-jasmine": "^0.3.5"
+    "karma-jasmine": "^0.2.2",
+    "karma-jasmine-html-reporter": "^0.1.7"
   }
 }
