Simple fixes for Travis CI

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Angular button directive for deferred actions.",
   "main": "dist/angular-promise-button.min.js",
   "scripts": {
-    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS"
+    "test": "grunt templates && karma start --single-run --browsers PhantomJS"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "grunt-html2js": "^0.3.0",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
+    "karma-coverage": "^0.2.7",
     "karma-jasmine": "^0.2.2",
     "karma-jasmine-html-reporter": "^0.1.7",
     "karma-phantomjs-launcher": "^0.1.4"
