--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ node_js:
 before_script:
   - bower install
   - npm install -g karma-cli
+  - npm install -g grunt-cli
 notifications:
   email: false
