--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-promise-button",
-  "version": "0.1.0",
+  "version": "0.7.0",
   "homepage": "https://github.com/erpheus/angular-promise-button",
   "authors": [
     "Erpheus <erpheus@gmail.com>"
@@ -22,8 +22,9 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "test",
-    "tests"
+    "tests",
+    "src",
+    "demo"
   ],
   "dependencies": {
     "angular": "~1.3.14"
