--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-html2js": "^0.3.0",
     "jasmine-core": "^2.2.0",
